# text-analytics-and-tree-structures

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
notebooks/: text_analytics_and_tree_structures.ipynb  text_analytics_and_tree_structures.py
src/: text_analytics_and_tree_structures.py
tests/: test_text_analytics_and_tree_structures.py
