[project]
name = "text-analytics-and-tree-structures"
version = "0.1.0"
description = "Tree structure modeling and text analytics pipeline over Alice in Wonderland"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8,<4.0",
  "pandas>=2.2,<3.0",
  "wordcloud>=1.9,<2.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
